reverted back to include 2022-23 season in the dataset as well

--- a/01_data_preprocessing.ipynb
+++ b/01_data_preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +421,7 @@
        "[2122 rows x 73 columns]"
       ]
      },
-     "execution_count": 194,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -466,7 +466,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 195,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -505,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -622,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -637,7 +637,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 199,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -661,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -673,7 +673,7 @@
        "Name: halftime_result, dtype: int64"
       ]
      },
-     "execution_count": 200,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -684,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -696,7 +696,7 @@
        "Name: fulltime_result, dtype: int64"
       ]
      },
-     "execution_count": 201,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -707,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -739,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -783,7 +783,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 203,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -801,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -860,7 +860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -889,7 +889,7 @@
        " 'pinnaclesports_closing_away_win_odds']"
       ]
      },
-     "execution_count": 205,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -904,7 +904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -968,7 +968,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -994,7 +994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1011,7 +1011,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1025,7 +1025,7 @@
        " 'away_post_rating']"
       ]
      },
-     "execution_count": 209,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1052,7 +1052,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1089,7 +1089,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1106,7 +1106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1156,18 +1156,18 @@
        "  <tbody>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>0 rows × 50 columns</p>\n",
+       "<p>0 rows × 49 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "Empty DataFrame\n",
-       "Columns: [season, date, home, away, fulltime_home_goals, fulltime_away_goals, fulltime_result, halftime_home_goals, halftime_away_goals, halftime_result, home_post_rating, away_post_rating, venue, home_possession, away_possession, home_total_shots, away_total_shots, home_shots_on_target, away_shots_on_target, home_shots_off_target, away_shots_off_target, home_blocked, away_blocked, home_passing_percent, away_passing_percent, home_clear_cut_chances, away_clear_cut_chances, home_corners, away_corners, home_offsides, away_offsides, home_tackles_percent, away_tackles_percent, home_aerial_duels, away_aerial_duels, home_saves, away_saves, home_fouls_committed, away_fouls_committed, home_fouls_won, away_fouls_won, home_yellow_cards, away_yellow_cards, home_red_cards, away_red_cards, home_xg, away_xg, bet365_home_win_prob, bet365_draw_prob, bet365_away_win_prob]\n",
+       "Columns: [season, date, home, away, fulltime_home_goals, fulltime_away_goals, fulltime_result, halftime_home_goals, halftime_away_goals, halftime_result, home_post_rating, away_post_rating, home_possession, away_possession, home_total_shots, away_total_shots, home_shots_on_target, away_shots_on_target, home_shots_off_target, away_shots_off_target, home_blocked, away_blocked, home_passing_percent, away_passing_percent, home_clear_cut_chances, away_clear_cut_chances, home_corners, away_corners, home_offsides, away_offsides, home_tackles_percent, away_tackles_percent, home_aerial_duels, away_aerial_duels, home_saves, away_saves, home_fouls_committed, away_fouls_committed, home_fouls_won, away_fouls_won, home_yellow_cards, away_yellow_cards, home_red_cards, away_red_cards, home_xg, away_xg, bet365_home_win_prob, bet365_draw_prob, bet365_away_win_prob]\n",
        "Index: []\n",
        "\n",
-       "[0 rows x 50 columns]"
+       "[0 rows x 49 columns]"
       ]
      },
-     "execution_count": 211,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1186,7 +1186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1236,18 +1236,18 @@
        "  <tbody>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>0 rows × 50 columns</p>\n",
+       "<p>0 rows × 49 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "Empty DataFrame\n",
-       "Columns: [season, date, home, away, fulltime_home_goals, fulltime_away_goals, fulltime_result, halftime_home_goals, halftime_away_goals, halftime_result, home_post_rating, away_post_rating, venue, home_possession, away_possession, home_total_shots, away_total_shots, home_shots_on_target, away_shots_on_target, home_shots_off_target, away_shots_off_target, home_blocked, away_blocked, home_passing_percent, away_passing_percent, home_clear_cut_chances, away_clear_cut_chances, home_corners, away_corners, home_offsides, away_offsides, home_tackles_percent, away_tackles_percent, home_aerial_duels, away_aerial_duels, home_saves, away_saves, home_fouls_committed, away_fouls_committed, home_fouls_won, away_fouls_won, home_yellow_cards, away_yellow_cards, home_red_cards, away_red_cards, home_xg, away_xg, bet365_home_win_prob, bet365_draw_prob, bet365_away_win_prob]\n",
+       "Columns: [season, date, home, away, fulltime_home_goals, fulltime_away_goals, fulltime_result, halftime_home_goals, halftime_away_goals, halftime_result, home_post_rating, away_post_rating, home_possession, away_possession, home_total_shots, away_total_shots, home_shots_on_target, away_shots_on_target, home_shots_off_target, away_shots_off_target, home_blocked, away_blocked, home_passing_percent, away_passing_percent, home_clear_cut_chances, away_clear_cut_chances, home_corners, away_corners, home_offsides, away_offsides, home_tackles_percent, away_tackles_percent, home_aerial_duels, away_aerial_duels, home_saves, away_saves, home_fouls_committed, away_fouls_committed, home_fouls_won, away_fouls_won, home_yellow_cards, away_yellow_cards, home_red_cards, away_red_cards, home_xg, away_xg, bet365_home_win_prob, bet365_draw_prob, bet365_away_win_prob]\n",
        "Index: []\n",
        "\n",
-       "[0 rows x 50 columns]"
+       "[0 rows x 49 columns]"
       ]
      },
-     "execution_count": 213,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1276,7 +1276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1888,7 +1888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
