--- a/dataset/match_stats/01_links_extraction.ipynb
+++ b/dataset/match_stats/01_links_extraction.ipynb
@@ -14,7 +14,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "league_seasons = [f\"{2000+year}-{year+1}\" for year in range(17, 22)]"
+    "league_seasons = [f\"{2000+year}-{year+1}\" for year in range(17, 23)]"
    ]
   },
   {
@@ -26,7 +26,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[WDM] - Downloading: 100%|██████████| 6.80M/6.80M [00:02<00:00, 2.80MB/s]\n"
+      "[WDM] - Downloading: 100%|██████████| 6.80M/6.80M [00:07<00:00, 996kB/s] \n"
      ]
     }
    ],
@@ -120,7 +120,22 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TimeoutException",
+     "evalue": "Message: \nStacktrace:\nBacktrace:\n\tGetHandleVerifier [0x0120DCE3+50899]\n\t(No symbol) [0x0119E111]\n\t(No symbol) [0x010A5588]\n\t(No symbol) [0x010D08F9]\n\t(No symbol) [0x010D0AFB]\n\t(No symbol) [0x010FF902]\n\t(No symbol) [0x010EB944]\n\t(No symbol) [0x010FE01C]\n\t(No symbol) [0x010EB6F6]\n\t(No symbol) [0x010C7708]\n\t(No symbol) [0x010C886D]\n\tGetHandleVerifier [0x01473EAE+2566302]\n\tGetHandleVerifier [0x014A92B1+2784417]\n\tGetHandleVerifier [0x014A327C+2759788]\n\tGetHandleVerifier [0x012A5740+672048]\n\t(No symbol) [0x011A8872]\n\t(No symbol) [0x011A41C8]\n\t(No symbol) [0x011A42AB]\n\t(No symbol) [0x011971B7]\n\tBaseThreadInitThunk [0x75F87D49+25]\n\tRtlInitializeExceptionChain [0x7708B74B+107]\n\tRtlClearBits [0x7708B6CF+191]\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTimeoutException\u001b[0m                          Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[3], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m df \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mconcat(\n\u001b[1;32m----> 2\u001b[0m     [extract_games(league_season) \u001b[39mfor\u001b[39;00m league_season \u001b[39min\u001b[39;00m league_seasons])\n\u001b[0;32m      4\u001b[0m df \u001b[39m=\u001b[39m df\u001b[39m.\u001b[39mreset_index(drop\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m)\n",
+      "Cell \u001b[1;32mIn[3], line 2\u001b[0m, in \u001b[0;36m<listcomp>\u001b[1;34m(.0)\u001b[0m\n\u001b[0;32m      1\u001b[0m df \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mconcat(\n\u001b[1;32m----> 2\u001b[0m     [extract_games(league_season) \u001b[39mfor\u001b[39;00m league_season \u001b[39min\u001b[39;00m league_seasons])\n\u001b[0;32m      4\u001b[0m df \u001b[39m=\u001b[39m df\u001b[39m.\u001b[39mreset_index(drop\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m)\n",
+      "Cell \u001b[1;32mIn[2], line 29\u001b[0m, in \u001b[0;36mextract_games\u001b[1;34m(league_season)\u001b[0m\n\u001b[0;32m     21\u001b[0m driver\u001b[39m.\u001b[39mget(url)\n\u001b[0;32m     23\u001b[0m \u001b[39m# When the page loads, the table's empty and is later filled by AJAX calls.\u001b[39;00m\n\u001b[0;32m     24\u001b[0m \u001b[39m# So, we wait until there is an element by the id of for instance\u001b[39;00m\n\u001b[0;32m     25\u001b[0m \u001b[39m# \"widgetLite-5\" available on the page before proceeding to\u001b[39;00m\n\u001b[0;32m     26\u001b[0m \u001b[39m# extract the table.\u001b[39;00m\n\u001b[0;32m     27\u001b[0m \u001b[39m# The availability of the said element shows that the table is fully loaded\u001b[39;00m\n\u001b[0;32m     28\u001b[0m \u001b[39m# and filled.\u001b[39;00m\n\u001b[1;32m---> 29\u001b[0m element \u001b[39m=\u001b[39m WebDriverWait(driver, \u001b[39m20\u001b[39;49m)\u001b[39m.\u001b[39;49muntil(\n\u001b[0;32m     30\u001b[0m     EC\u001b[39m.\u001b[39;49mpresence_of_element_located((By\u001b[39m.\u001b[39;49mID, \u001b[39m'\u001b[39;49m\u001b[39mwidgetLite-10\u001b[39;49m\u001b[39m'\u001b[39;49m))\n\u001b[0;32m     31\u001b[0m )\n\u001b[0;32m     33\u001b[0m \u001b[39m# These are elements initially displayed on the page\u001b[39;00m\n\u001b[0;32m     34\u001b[0m visible_elements \u001b[39m=\u001b[39m BeautifulSoup(driver\u001b[39m.\u001b[39mpage_source, \u001b[39m'\u001b[39m\u001b[39mlxml\u001b[39m\u001b[39m'\u001b[39m)\n",
+      "File \u001b[1;32mc:\\Users\\Babak\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\selenium\\webdriver\\support\\wait.py:95\u001b[0m, in \u001b[0;36mWebDriverWait.until\u001b[1;34m(self, method, message)\u001b[0m\n\u001b[0;32m     93\u001b[0m     \u001b[39mif\u001b[39;00m time\u001b[39m.\u001b[39mmonotonic() \u001b[39m>\u001b[39m end_time:\n\u001b[0;32m     94\u001b[0m         \u001b[39mbreak\u001b[39;00m\n\u001b[1;32m---> 95\u001b[0m \u001b[39mraise\u001b[39;00m TimeoutException(message, screen, stacktrace)\n",
+      "\u001b[1;31mTimeoutException\u001b[0m: Message: \nStacktrace:\nBacktrace:\n\tGetHandleVerifier [0x0120DCE3+50899]\n\t(No symbol) [0x0119E111]\n\t(No symbol) [0x010A5588]\n\t(No symbol) [0x010D08F9]\n\t(No symbol) [0x010D0AFB]\n\t(No symbol) [0x010FF902]\n\t(No symbol) [0x010EB944]\n\t(No symbol) [0x010FE01C]\n\t(No symbol) [0x010EB6F6]\n\t(No symbol) [0x010C7708]\n\t(No symbol) [0x010C886D]\n\tGetHandleVerifier [0x01473EAE+2566302]\n\tGetHandleVerifier [0x014A92B1+2784417]\n\tGetHandleVerifier [0x014A327C+2759788]\n\tGetHandleVerifier [0x012A5740+672048]\n\t(No symbol) [0x011A8872]\n\t(No symbol) [0x011A41C8]\n\t(No symbol) [0x011A42AB]\n\t(No symbol) [0x011971B7]\n\tBaseThreadInitThunk [0x75F87D49+25]\n\tRtlInitializeExceptionChain [0x7708B74B+107]\n\tRtlClearBits [0x7708B6CF+191]\n"
+     ]
+    }
+   ],
    "source": [
     "df = pd.concat(\n",
     "    [extract_games(league_season) for league_season in league_seasons])\n",
@@ -140,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
