replace post-game attributes with pre-game ones; decided to keep the outliers, created the reference dataset, made dates homogeneous by extracting the season's week no.

--- a/dataset/matches/consolidation.ipynb
+++ b/dataset/matches/consolidation.ipynb
@@ -193,11 +193,11 @@
     "    'Date': 'date',\n",
     "    'HomeTeam': 'home', \n",
     "    'AwayTeam': 'away',\n",
-    "    'FTHG': 'fulltime_home_goals',\n",
-    "    'FTAG': 'fulltime_away_goals',\n",
+    "    'FTHG': 'home_fulltime_goals',\n",
+    "    'FTAG': 'away_fulltime_goals',\n",
     "    'FTR': 'fulltime_result',\n",
-    "    'HTHG': 'halftime_home_goals',\n",
-    "    'HTAG': 'halftime_away_goals',\n",
+    "    'HTHG': 'home_halftime_goals',\n",
+    "    'HTAG': 'away_halftime_goals',\n",
     "    'HTR': 'halftime_result',\n",
     "    'HS': 'home_total_shots',\n",
     "    'AS': 'away_total_shots',\n",
