--- a/01_data_preprocessing.ipynb
+++ b/01_data_preprocessing.ipynb
@@ -2,16 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "\n",
-    "pd.options.mode.chained_assignment = None  # default='warn'"
+    "import seaborn as sns"
    ]
   },
   {
@@ -24,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -423,13 +421,13 @@
        "[2122 rows x 73 columns]"
       ]
      },
-     "execution_count": 216,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv(\"./dataset/dataset.csv\", parse_dates=['date'])\n",
+    "df = pd.read_csv(\"./dataset/matches_initial.csv\", parse_dates=['date'])\n",
     "\n",
     "df"
    ]
@@ -452,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -468,7 +466,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 217,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -490,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -507,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -524,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -624,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -639,7 +637,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 221,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -663,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -675,7 +673,7 @@
        "Name: halftime_result, dtype: int64"
       ]
      },
-     "execution_count": 222,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -686,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -698,7 +696,7 @@
        "Name: fulltime_result, dtype: int64"
       ]
      },
-     "execution_count": 223,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -709,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -741,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -785,7 +783,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 225,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -803,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -862,7 +860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -891,7 +889,7 @@
        " 'pinnaclesports_closing_away_win_odds']"
       ]
      },
-     "execution_count": 227,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -906,7 +904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -970,7 +968,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -996,7 +994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1013,7 +1011,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -1027,7 +1025,7 @@
        " 'away_post_rating']"
       ]
      },
-     "execution_count": 231,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1054,7 +1052,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1091,7 +1089,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1119,7 +1117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1168,17 +1166,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Generating a dataframe to store each team's attributes at every point in time regardless of home/away\n",
-    "reference_df = get_stacked_df(df)"
+    "df_melt = get_stacked_df(df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1195,10 +1193,10 @@
     "# This function receives the match's date and the participating teams and returns the teams' scores before the match\n",
     "def get_pre_match_results(season, match_date, home, away, cols):\n",
     "    def get_team_data(season, match_date, team, cols):\n",
-    "        filter = ((reference_df['season'] == season) &\n",
-    "                              (reference_df['team'] == team) &\n",
-    "                              (reference_df['date'] <= match_date))\n",
-    "        team_data = reference_df[filter].sort_values('date', ascending=True)\n",
+    "        filter = ((df_melt['season'] == season) &\n",
+    "                              (df_melt['team'] == team) &\n",
+    "                              (df_melt['date'] <= match_date))\n",
+    "        team_data = df_melt[filter].sort_values('date', ascending=True)\n",
     "        is_first_match = team_data.shape[0] == 1\n",
     "        row_index = -1 if is_first_match else -2\n",
     "        return list(team_data.iloc[row_index][cols]), is_first_match\n",
@@ -1236,7 +1234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1261,7 +1259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -1322,7 +1320,7 @@
        "[0 rows x 50 columns]"
       ]
      },
-     "execution_count": 238,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1341,7 +1339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -1402,7 +1400,7 @@
        "[0 rows x 50 columns]"
       ]
      },
-     "execution_count": 239,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1431,7 +1429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -2052,7 +2050,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -2289,6 +2287,41 @@
     "        print(f\"Mean={col_mean}, Std={col_std}\")\n",
     "        print(f\"Outlier values: {col_filtered[col].unique()}\\n\")\n",
     "        outlier_indices = outlier_indices.union(set(col_filtered.index))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The outlier report shows that the extreme values are not the result of statistical mistakes, neither are semantically irregular; but they are the result of natural variation in the data; hence, it was decided to keep and not drop them."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Storing the cleaned dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_melt = get_stacked_df(df)\n",
+    "df_melt.to_csv(\"./dataset/team_references.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv(\"./dataset/matches_cleaned.csv\", index=False)"
    ]
   }
  ],
