--- a/dataset/matches/consolidation.ipynb
+++ b/dataset/matches/consolidation.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "1f0059f8-96e0-4a3d-8819-f65492287ac0",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "5380469c-b0ca-4390-9e0e-57121bf260b0",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "9adb0464-f019-483e-a5c4-6ac084044d5e",
    "metadata": {},
    "outputs": [],
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "6cf318df",
    "metadata": {},
    "outputs": [],
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "61ab83be",
    "metadata": {},
    "outputs": [],
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "df8bf6cd",
    "metadata": {},
    "outputs": [],
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "3d5ed6ee",
    "metadata": {},
    "outputs": [],
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "093020c3",
    "metadata": {},
    "outputs": [],
@@ -211,27 +211,27 @@
     "    'AY': 'away_yellow_cards',\n",
     "    'HR': 'home_red_cards',\n",
     "    'AR': 'away_red_cards',\n",
-    "    'B365H': 'bet365_home_win_odds',\n",
-    "    'B365D': 'bet365_draw_odds',\n",
-    "    'B365A': 'bet365_away_win_odds',\n",
-    "    'BWH': 'betandwin_home_win_odds',\n",
-    "    'BWD': 'betandwin_draw_odds',\n",
-    "    'BWA': 'betandwin_away_win_odds',\n",
-    "    'IWH': 'interwetten_home_win_odds',\n",
-    "    'IWD': 'interwetten_draw_odds',\n",
-    "    'IWA': 'interwetten_away_win_odds',\n",
-    "    'PSH': 'pinnaclesports_home_win_odds',\n",
-    "    'PSD': 'pinnaclesports_draw_odds',\n",
-    "    'PSA': 'pinnaclesports_away_win_odds',\n",
-    "    'WHH': 'williamhill_home_win_odds',\n",
-    "    'WHD': 'williamhill_draw_odds',\n",
-    "    'WHA': 'williamhill_away_win_odds',\n",
-    "    'VCH': 'vcbet_home_win_odds',\n",
-    "    'VCD': 'vcbet_draw_odds',\n",
-    "    'VCA': 'vcbet_away_win_odds',\n",
-    "    'PSCH': 'pinnaclesports_closing_home_win_odds',\n",
-    "    'PSCD': 'pinnaclesports_closing_draw_odds',\n",
-    "    'PSCA': 'pinnaclesports_closing_away_win_odds',\n",
+    "    'B365H': 'home_win_bet365_odds',\n",
+    "    'B365D': 'draw_bet365_odds',\n",
+    "    'B365A': 'away_win_bet365_odds',\n",
+    "    'BWH': 'home_win_betandwin_odds',\n",
+    "    'BWD': 'draw_betandwin_odds',\n",
+    "    'BWA': 'away_win_betandwin_odds',\n",
+    "    'IWH': 'home_win_interwetten_odds',\n",
+    "    'IWD': 'draw_interwetten_odds',\n",
+    "    'IWA': 'away_win_interwetten_odds',\n",
+    "    'PSH': 'home_win_pinnaclesports_odds',\n",
+    "    'PSD': 'draw_pinnaclesports_odds',\n",
+    "    'PSA': 'away_win_pinnaclesports_odds',\n",
+    "    'WHH': 'home_win_williamhill_odds',\n",
+    "    'WHD': 'draw_williamhill_odds',\n",
+    "    'WHA': 'away_win_williamhill_odds',\n",
+    "    'VCH': 'home_win_vcbet_odds',\n",
+    "    'VCD': 'draw_vcbet_odds',\n",
+    "    'VCA': 'away_win_vcbet_odds',\n",
+    "    'PSCH': 'home_win_pinnaclesports_closing_odds',\n",
+    "    'PSCD': 'draw_pinnaclesports_closing_odds',\n",
+    "    'PSCA': 'away_win_pinnaclesports_closing_odds',\n",
     "})"
    ]
   },
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "6984c871",
    "metadata": {},
    "outputs": [],
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "0960411c",
    "metadata": {},
    "outputs": [],
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "60cd497e",
    "metadata": {},
    "outputs": [],
