finished the outlier analysis

--- a/dataset/dataset_preparation.ipynb
+++ b/dataset/dataset_preparation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -296,7 +296,7 @@
        "28              Almeria           24"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -533,7 +533,7 @@
        "28      Almeria           23"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -551,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -630,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -648,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -859,7 +859,7 @@
        "28           UD Almería           25"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -877,7 +877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -956,7 +956,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -974,7 +974,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1185,7 +1185,7 @@
        "28          Almería           38"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1203,7 +1203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1282,7 +1282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1300,7 +1300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1328,7 +1328,7 @@
        "       'Wanda Metropolitano.'], dtype=object)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1339,7 +1339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1351,7 +1351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1372,7 +1372,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1392,7 +1392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1409,17 +1409,18 @@
       "------------------------------\n",
       "Index(['season', 'date', 'home', 'away', 'home_fulltime_goals',\n",
       "       'away_fulltime_goals', 'fulltime_result', 'home_halftime_goals',\n",
-      "       'away_halftime_goals', 'halftime_result', 'home_win_bet365_odds',\n",
-      "       'draw_bet365_odds', 'away_win_bet365_odds', 'home_win_betandwin_odds',\n",
-      "       'draw_betandwin_odds', 'away_win_betandwin_odds',\n",
-      "       'home_win_interwetten_odds', 'draw_interwetten_odds',\n",
-      "       'away_win_interwetten_odds', 'home_win_pinnaclesports_odds',\n",
-      "       'draw_pinnaclesports_odds', 'away_win_pinnaclesports_odds',\n",
-      "       'home_win_williamhill_odds', 'draw_williamhill_odds',\n",
-      "       'away_win_williamhill_odds', 'home_win_vcbet_odds', 'draw_vcbet_odds',\n",
-      "       'away_win_vcbet_odds', 'home_win_pinnaclesports_closing_odds',\n",
-      "       'draw_pinnaclesports_closing_odds',\n",
-      "       'away_win_pinnaclesports_closing_odds', 'home_pre_rating',\n",
+      "       'away_halftime_goals', 'halftime_result', 'home_win_bet365_probs',\n",
+      "       'draw_bet365_probs', 'away_win_bet365_probs',\n",
+      "       'home_win_betandwin_probs', 'draw_betandwin_probs',\n",
+      "       'away_win_betandwin_probs', 'home_win_interwetten_probs',\n",
+      "       'draw_interwetten_probs', 'away_win_interwetten_probs',\n",
+      "       'home_win_pinnaclesports_probs', 'draw_pinnaclesports_probs',\n",
+      "       'away_win_pinnaclesports_probs', 'home_win_williamhill_probs',\n",
+      "       'draw_williamhill_probs', 'away_win_williamhill_probs',\n",
+      "       'home_win_vcbet_probs', 'draw_vcbet_probs', 'away_win_vcbet_probs',\n",
+      "       'home_win_pinnaclesports_closing_probs',\n",
+      "       'draw_pinnaclesports_closing_probs',\n",
+      "       'away_win_pinnaclesports_closing_probs', 'home_pre_rating',\n",
       "       'home_rating_delta', 'home_post_rating', 'away_pre_rating',\n",
       "       'away_rating_delta', 'away_post_rating', 'venue', 'attendance',\n",
       "       'home_possession', 'away_possession', 'home_total_shots',\n",
@@ -1463,7 +1464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
