--- a/dataset/matches/consolidation.ipynb
+++ b/dataset/matches/consolidation.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "90f8f476-8b96-4202-a703-35cf5ec31fa3",
    "metadata": {},
@@ -10,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "id": "1f0059f8-96e0-4a3d-8819-f65492287ac0",
    "metadata": {},
    "outputs": [],
@@ -21,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "id": "5380469c-b0ca-4390-9e0e-57121bf260b0",
    "metadata": {},
    "outputs": [],
@@ -42,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "id": "9adb0464-f019-483e-a5c4-6ac084044d5e",
    "metadata": {},
    "outputs": [],
@@ -84,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "id": "6cf318df",
    "metadata": {},
    "outputs": [],
@@ -108,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "id": "61ab83be",
    "metadata": {},
    "outputs": [],
@@ -138,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "id": "df8bf6cd",
    "metadata": {},
    "outputs": [],
@@ -161,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 24,
    "id": "3d5ed6ee",
    "metadata": {},
    "outputs": [],
@@ -183,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 25,
    "id": "093020c3",
    "metadata": {},
    "outputs": [],
@@ -247,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 26,
    "id": "6984c871",
    "metadata": {},
    "outputs": [],
@@ -288,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 27,
    "id": "0960411c",
    "metadata": {},
    "outputs": [],
@@ -302,6 +303,53 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "4c8247be",
+   "metadata": {},
+   "source": [
+    "# Converting betting odds to probabilities\n",
+    "This step is to convert the odds to probabilities and uses the formula below:\n",
+    "<ul>\n",
+    "<li>P(home_win) = home_win_odds / (home_win_odds + draw_odds + away_win_odds)</li>\n",
+    "<li>P(draw) = draw_odds / (home_win_odds + draw_odds + away_win_odds)</li>\n",
+    "<li>P(away_win) = away_win_odds / (home_win_odds + draw_odds + away_win_odds)</li>\n",
+    "</ul>\n",
+    "<p>This helps to make the betting odds consistent; hence allowing to use any betting service of choice during future predictions.</p>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "44fd1b3a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "betting_cols = [col for col in df.columns if 'odds' in col]\n",
+    "betting_services = [col[9:-5] for col in betting_cols if 'home_win' in col]\n",
+    "\n",
+    "def get_bet_probs(row, betting_service):\n",
+    "    home_win_odds, draw_odds, away_win_odds = row[[\n",
+    "        f\"home_win_{betting_service}_odds\", \n",
+    "        f\"draw_{betting_service}_odds\", \n",
+    "        f\"away_win_{betting_service}_odds\"]]\n",
+    "    total_odds = sum([home_win_odds, draw_odds, away_win_odds])\n",
+    "    return [round(val/total_odds, 2) for val in [home_win_odds, draw_odds, away_win_odds]]\n",
+    "\n",
+    "for betting_service in betting_services:\n",
+    "    df[[\n",
+    "        f\"home_win_{betting_service}_probs\",\n",
+    "        f\"draw_{betting_service}_probs\",\n",
+    "        f\"away_win_{betting_service}_probs\"]] = df.apply(\n",
+    "            lambda row: get_bet_probs(row, betting_service),\n",
+    "            axis='columns',\n",
+    "            result_type='expand')\n",
+    "\n",
+    "df = df.drop(betting_cols, axis='columns')"
+   ]
+  },
+  {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "dee0b89f",
    "metadata": {},
