removed the test data from outlier deletion

--- a/01_data_preprocessing.ipynb
+++ b/01_data_preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
@@ -457,7 +457,7 @@
        "[2122 rows x 73 columns]"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 139,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -486,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [
     {
@@ -502,7 +502,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 140,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -524,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -541,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -588,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -667,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -756,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [
     {
@@ -806,7 +806,7 @@
        " 'fd_opponent_win_pinnaclesports_closing_probs']"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 145,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -821,7 +821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [
     {
@@ -850,7 +850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -880,7 +880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [
     {
@@ -900,7 +900,7 @@
        " 'fd_opponent_post_rating']"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 148,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -921,7 +921,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -949,7 +949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [
     {
@@ -965,7 +965,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 150,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -985,7 +985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1020,7 +1020,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [
     {
@@ -1032,7 +1032,7 @@
        "Name: fulltime_result, dtype: int64"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 152,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1043,7 +1043,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1065,7 +1065,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1093,7 +1093,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [
     {
@@ -1206,7 +1206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1239,7 +1239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [
     {
@@ -1300,7 +1300,7 @@
        "[0 rows x 91 columns]"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 157,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1319,7 +1319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [
     {
@@ -1380,7 +1380,7 @@
        "[0 rows x 79 columns]"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 158,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1403,7 +1403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [
     {
@@ -1464,7 +1464,7 @@
        "[0 rows x 40 columns]"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 159,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1488,7 +1488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [
     {
@@ -1549,7 +1549,7 @@
        "[0 rows x 39 columns]"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 160,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1573,7 +1573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [
     {
@@ -2757,7 +2757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2788,7 +2788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [
     {
@@ -4116,7 +4116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [
     {
@@ -4141,14 +4141,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "444 observations were dropped due to being outliers.\n"
+      "384 observations were dropped due to being outliers.\n"
      ]
     }
    ],
@@ -4280,7 +4280,8 @@
     "\n",
     "outlier_vals = outlier_vals_team | outlier_vals_opponent | outlier_vals_fd_team | outlier_vals_fd_opponent\n",
     "\n",
-    "outlier_rows = df[outlier_vals]\n",
+    "# Excluding the last season's matches from outlier deletion since it will not be incorporated into training the model\n",
+    "outlier_rows = df[(outlier_vals) & (df['season'] != '2022_2023')]\n",
     "\n",
     "df = df.drop(outlier_rows.index, axis='index')\n",
     "\n",
@@ -4297,7 +4298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [],
    "source": [
